--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
 
         <ul class="deck">
-            <li class="card match">
+            <!-- <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
             <li class="card match">
@@ -77,7 +77,7 @@
             </li>
             <li class="card match">
                 <i class="fa fa-cube"></i>
-            </li>
+            </li> -->
         </ul>
     </div>
 
